refactor: refactorizando codigo