@@ -8,14 +8,16 @@ import chpp.plataform.teams_proyects.domain.service.IMissionService;
 import chpp.plataform.teams_proyects.infrastructure.dto.MisionDTO;
 import chpp.plataform.teams_proyects.infrastructure.exceptions.BusinessRuleException;
 import chpp.plataform.teams_proyects.infrastructure.mappers.MissionMapper;
-import chpp.plataform.teams_proyects.infrastructure.messages.MessageLoader;
+import chpp.plataform.teams_proyects.shared.exceptions.ExceptionsUtils;
+import chpp.plataform.teams_proyects.shared.messages.MessagesUtils;
+import chpp.plataform.teams_proyects.shared.validation.ValidationUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -25,44 +27,45 @@ public class MissionServiceImp implements IMissionService {
 
     @Override
     public ResponseDto<MisionDTO> createMission(MisionDTO missionDTO) {
-        validateMissionDTO(missionDTO);
+        ValidationUtils.validateRequired(missionDTO, "mission");
         missionDTO.setActive(true);
+
         Mission mission = MissionMapper.toDomain(missionDTO);
         Mission savedMission = missionRepository.save(mission);
-        MisionDTO savedMissionDTO = MissionMapper.toDTO(savedMission);
+
         return new ResponseDto<>(
                 HttpStatus.CREATED.value(),
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM002),
-                savedMissionDTO
+                MessagesUtils.get(MessagesConstant.IM002),
+                MissionMapper.toDTO(savedMission)
         );
     }
 
     @Override
     public ResponseDto<List<MisionDTO>> getAllMissions() {
-        List<Mission> allMissions = missionRepository.findAll();
-        return getListResponseDto(allMissions);
+        return buildMissionListResponseDto(missionRepository.findAll());
     }
 
     @Override
     public ResponseDto<MisionDTO> updateMission(Long id, MisionDTO missionDTO) {
         Mission existingMission = getMissionOrThrow(id);
-        validateMissionDTO(missionDTO);
+        ValidationUtils.validateRequired(missionDTO, "mission");
+
         Mission updatedMission = MissionMapper.toDomain(missionDTO);
         missionRepository.update(id, updatedMission);
+
         return new ResponseDto<>(
                 HttpStatus.OK.value(),
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM003),
+                MessagesUtils.get(MessagesConstant.IM003),
                 MissionMapper.toDTO(updatedMission)
         );
     }
 
     @Override
     public ResponseDto<MisionDTO> getMissionById(Long id) {
-        Mission mission = getMissionOrThrow(id);
         return new ResponseDto<>(
                 HttpStatus.OK.value(),
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM001),
-                MissionMapper.toDTO(mission)
+                MessagesUtils.get(MessagesConstant.IM001),
+                MissionMapper.toDTO(getMissionOrThrow(id))
         );
     }
 
@@ -70,10 +73,10 @@ public class MissionServiceImp implements IMissionService {
     public ResponseDto<List<MisionDTO>> getActiveMissions() {
         List<MisionDTO> missions = missionRepository.findByActiveTrue().stream()
                 .map(MissionMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
         return new ResponseDto<>(
                 HttpStatus.OK.value(),
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM001),
+                MessagesUtils.get(MessagesConstant.IM001),
                 missions
         );
     }
@@ -82,10 +85,10 @@ public class MissionServiceImp implements IMissionService {
     public ResponseDto<List<MisionDTO>> getInactiveMissions() {
         List<MisionDTO> missions = missionRepository.findByActiveFalse().stream()
                 .map(MissionMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
         return new ResponseDto<>(
                 HttpStatus.OK.value(),
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM001),
+                MessagesUtils.get(MessagesConstant.IM001),
                 missions
         );
     }
@@ -94,17 +97,19 @@ public class MissionServiceImp implements IMissionService {
     public ResponseDto<Void> activateMission(Long missionId) {
         getMissionOrThrow(missionId);
         boolean activated = missionRepository.activateMission(missionId);
+
         if (!activated) {
             throw new BusinessRuleException(
                     HttpStatus.CONFLICT.value(),
                     MessagesConstant.EM011,
-                    MessageLoader.getInstance().getMessage(MessagesConstant.EM011, "Mission", missionId)
+                    MessagesUtils.get(MessagesConstant.EM011, "Mission", missionId)
             );
         }
+
         return new ResponseDto<>(
                 HttpStatus.NO_CONTENT.value(),
-                MessagesConstant.IM005,
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM005, "activate")
+                MessagesUtils.get(MessagesConstant.IM005, "activate"),
+                null
         );
     }
 
@@ -112,62 +117,44 @@ public class MissionServiceImp implements IMissionService {
     public ResponseDto<Void> deactivateMission(Long missionId) {
         getMissionOrThrow(missionId);
         boolean deactivated = missionRepository.deactivateMission(missionId);
+
         if (!deactivated) {
             throw new BusinessRuleException(
                     HttpStatus.CONFLICT.value(),
                     MessagesConstant.EM011,
-                    MessageLoader.getInstance().getMessage(MessagesConstant.EM011, "Mission", missionId)
+                    MessagesUtils.get(MessagesConstant.EM011, "Mission", missionId)
             );
         }
+
         return new ResponseDto<>(
                 HttpStatus.NO_CONTENT.value(),
-                MessagesConstant.IM005,
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM005, "desactivate")
+                MessagesUtils.get(MessagesConstant.IM005, "desactivate"),
+                null
         );
     }
 
-
-
-    private void validateMissionDTO(MisionDTO dto) {
-        if (dto == null) {
-            throw new BusinessRuleException(
-                    HttpStatus.BAD_REQUEST.value(),
-                    MessagesConstant.EM004,
-                    MessageLoader.getInstance().getMessage(MessagesConstant.EM004, "mission")
-            );
-        }
-    }
-
     private Mission getMissionOrThrow(Long missionId) {
-        if (missionId == null) {
-            throw new BusinessRuleException(
-                    HttpStatus.BAD_REQUEST.value(),
-                    MessagesConstant.EM006,
-                    MessageLoader.getInstance().getMessage(MessagesConstant.EM006, "missionId")
-            );
-        }
+        ValidationUtils.validateRequired(missionId, "missionId");
         return missionRepository.findById(missionId)
-                .orElseThrow(() -> new BusinessRuleException(
-                        HttpStatus.NOT_FOUND.value(),
-                        MessagesConstant.EM002,
-                        MessageLoader.getInstance().getMessage(MessagesConstant.EM002, missionId)
-                ));
+                .orElseThrow(() -> ExceptionsUtils.notFound(MessagesConstant.EM002, missionId));
     }
 
-    private ResponseDto<List<MisionDTO>> getListResponseDto(List<Mission> missions) {
+    private ResponseDto<List<MisionDTO>> buildMissionListResponseDto(List<Mission> missions) {
         if (missions == null || missions.isEmpty()) {
             return new ResponseDto<>(
                     HttpStatus.OK.value(),
-                    MessageLoader.getInstance().getMessage(MessagesConstant.EM012),
+                    MessagesUtils.get(MessagesConstant.EM012),
                     Collections.emptyList()
             );
         }
+
         List<MisionDTO> missionDTOS = missions.stream()
                 .map(MissionMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+
         return new ResponseDto<>(
                 HttpStatus.OK.value(),
-                MessageLoader.getInstance().getMessage(MessagesConstant.IM001),
+                MessagesUtils.get(MessagesConstant.IM001),
                 missionDTOS
         );
     }
